[tool.poetry]
name = "geomapper"
version = "0.6.0"
description = ""
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic = "^2.0.0"
visionapi_yq = {git = "https://github.com/siri-rouser/visionapi_YQ.git", rev= '7ea2ec0240dfb50f597c89d97c8e75872aa9204c', subdirectory="visionapi_YQ", tag = "0.0.1" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.9.0" }
redis = "^5.0.0"
pydantic-settings = "^2.0.3"
prometheus-client = "^0.17.1"
cameratransform = { git = "https://github.com/rgerum/cameratransform", rev = "ed36491" }
geojson-pydantic = "^1.1.2"
shapely = "^2.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
